[project]
name = "mpts_52"
version = "0.1.0"
description = "mpts_52"
requires-python = ">=3.12.0, <3.13"
dependencies = [
    "matplotlib>=3.7.1,<3.8.0",
    "numpy>=1.26.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.26.0",
    "google-generativeai>=0.3.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.21.0",
    "torch",
    "accelerate",
    "pandas>=2.2.3",
    "requests",
    "matbench-genmetrics",
]


[dependency-groups]
dev = [
    "basedpyright",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-rerunfailures"
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"



[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mpts_52"]
